# avrdude

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: build.yml
src/: Makefile.am  buildinfo.c  configure.ac  libavrdude.h  main.c
src/doc/: CMakeLists.txt  Makefile.am  avrdude.texi  include.am
src/python/: adgui.py  include.am
tools/: check-sourcecode  test-avrdude
